--- a/style.css
+++ b/style.css
@@ -1,181 +1,286 @@
-@font-face {
-    font-family:"ProFont";
-    src: url('ProFont.ttf');
+html, body, .container {
+  padding: 0;
+  height: 100%;
+  width: 100%;
+  margin: 0;
 }
-body {
-    color:orange;
+html {
+  background: #222222;
+  overflow: hidden;
 }
-* {
-    margin:0;
-    padding:0;
+@media (max-width: 1400px) {
+  .container {
+    transform: scale(1);
+  }
 }
-.container {
-    overflow: hidden;
-    position:absolute;
-    top:10px;
-    bottom:10px;
-    left:10px;
-    right:10px;
-    border:1px solid grey;
+@media (max-width: 1050px) {
+  .container {
+    transform: scale(0.75);
+  }
 }
-.top-bar {
-    position:relative;
-    height:60px;
-    border-bottom:1px solid grey;
-    padding:0;
+@media (max-width: 700px) {
+  .container {
+    transform: scale(0.5);
+  }
 }
-.MC-logo {
-    height:60px;
-    margin-left:5px;
-    display:inline-block;
-    vertical-align:middle;
+@keyframes slideinleft {
+  from {
+    left: calc(50% - 500px);
+    background: #D1D1D1;
+    z-index: 10;
+  }
+  49% {
+    z-index: 50;
+  }
+  50% {
+    left: calc(50% - 800px);
+  }
+  to {
+    left: calc(50% - 250px);
+    z-index: 1000;
+    background: #FFFFFF;
+  }
 }
-.MC-title {
-    margin-left:5px;
-    vertical-align:middle;
-    display:inline-block;
-    font-size:30px;
-    font-family:ProFont;
-    color:rgb(255, 72, 0);
+@keyframes slideoutleft {
+  from {
+    left: calc(50% - 250px);
+    z-index: 1000;
+    background: #FFFFFF;
+  }
+  50% {
+    left: calc(50% - 800px);
+  }
+  51% {
+    z-index: 50;
+  }
+  to {
+    left: calc(50% - 500px);
+    background: #D1D1D1;
+    z-index: 10;
+  }
 }
-.MC-nav-menu {
-    margin-right:10px;
-    margin-left:10px;
-    float:right;
-    font-size:20px;
-    font-family:ProFont;
-    color:rgb(255, 72, 0);
-    color:hsl(17, 100%, 50%);
+@keyframes slideinright {
+  from {
+    left: 50%;
+    background: #D1D1D1;
+    z-index: 10;
+  }
+  49% {
+    z-index: 50;
+  }
+  50% {
+    left: calc(50% + 300px);
+  }
+  to {
+    left: calc(50% - 250px);
+    z-index: 1000;
+    background: #FFFFFF;
+  }
 }
-.MC-nav-menu.selected {
-    margin-right:10px;
-    margin-left:10px;
-    float:right;
-    font-size:20px;
-    font-family:ProFont;
-    color:rgb(255, 72, 0);
-    color:hsl(17, 100%, 50%);
-    border-bottom:1px solid hsl(17, 100%, 50%);
+@keyframes slideoutright {
+  from {
+    left: calc(50% - 250px);
+    z-index: 1000;
+    background: #FFFFFF;
+  }
+  50% {
+    left: calc(50% + 300px);
+  }
+  51% {
+    z-index: 50;
+  }
+  to {
+    left: 50%;
+    background: #D1D1D1;
+    z-index: 10;
+  }
 }
-.nav {
-    display: inline-block;
-    vertical-align: middle;
-    width:calc(50% - 2px);
-    box-sizing: border-box;
-    margin:0;
-    padding:0;
+.slot {
+  font-family: 'Orbitron', sans-serif;
+  background: #FFFFFF;
+  box-shadow: 5px 5px 30px black;
+  border-radius: 10px;
 }
-.hello {
-    font-family:ProFont;
-    padding:10px;
-    border-bottom:1px solid grey;
+.center {
+  text-align: center;
+  position: absolute;
+  height: 600px;
+  width: 400px;
+  left: calc(50% - 200px);
+  top: calc(50% - 300px);
+  z-index: 100;
 }
-.who {
-    font-family:ProFont;
-    padding:0;
+.left {
+  overflow: visible;
+  position: absolute;
+  height: 500px;
+  width: 500px;
+  left: calc(50% - 500px);
+  top: calc(50% - 250px);
+  background: #D1D1D1;
 }
-.who-title {
-    margin-top:10px;
-    font-family:ProFont;
-    padding:0;
-    padding-bottom:10px;
-    border-bottom:1px solid grey;
-    margin-bottom:0;
+.left.hover {
+  animation-duration: 1s;
+  animation-name: slideinleft;
+  position: absolute;
+  width: 500px;
+  left: calc(50% - 500px);
+  background: #D1D1D1;
 }
-.people-column {
-    position:relative;
-    font-family:ProFont;
-    padding:0;
+.left.close {
+  animation-duration: 1s;
+  animation-name: slideoutleft;
+  position: absolute;
+  width: 500px;
+  left: calc(50% - 500px);
+  background: #D1D1D1;
 }
-.people-column .person {
-    width:calc(100% - 0px);
-    position:absolute;
-    font-family:ProFont;
-    padding:0;
-    padding-top:10px;
-    border-bottom:1px solid grey;
+.left.hover2 {
+  z-index: 1000;
+  left: calc(50% - 250px);
+  background: #FFFFFF;
 }
-.people-column .person.b {
-    left:50%;
-    width:100%;
-    -webkit-transition: width 0.5s, left 0.5s;
-    /* Safari */
-    transition: width 0.5s, left 0.5s;
+.right {
+  position: absolute;
+  height: 500px;
+  width: 500px;
+  left: 50%;
+  top: calc(50% - 250px);
+  background: #D1D1D1;
 }
-.people-column[open="b"] .person.b {
-    left:0;
-    width:calc(100%);
-    -webkit-transition: width 0.5s, left 0.5s;
-    /* Safari */
-    transition: width 0.5s, left 0.5s;
+.right.hover {
+  animation-duration: 1s;
+  animation-name: slideinright;
+  position: absolute;
+  width: 500px;
+  left: 50%;
+  background: #D1D1D1;
 }
-.people-column[open="a"] .person.a {
-    left:0;
-    width:calc(100%);
-    z-index:100000;
-    -webkit-transition: width 0.5s, left 0.5s;
-    /* Safari */
-    transition: width 0.5s, left 0.5s;
+.right.close {
+  animation-duration: 1s;
+  animation-name: slideoutright;
+  position: absolute;
+  width: 500px;
+  left: 50%;
+  background: #D1D1D1;
 }
-.people-column .person.a {
-    left:-50%;
-    -webkit-transition: width 0.5s, left 0.5s, z-index 0.5s;
-    /* Safari */
-    transition: width 0.5s, left 0.5s, z-index 0.5s;
+.right.hover2 {
+  z-index: 1000;
+  left: calc(50% - 250px);
+  background: #FFFFFF;
 }
-.people-column .person-small {
-    display: inline-block;
-    vertical-align:top;
-    width:calc(100% - 2px);
+.CM-logo {}
+.credits {
+  position: absolute;
+  bottom: 5px;
+  width: 100%;
+  color: grey;
+  font-size: 10px;
 }
-.people-column .person-small table {
-    vertical-align:top;
-    width:calc(100% - 2px);
+.proj {
+  color: black;
+  text-decoration: none;
+  font-size: 12px;
+  display: inline-block;
+  padding: 10px;
+  margin-top: 0;
+  margin-right: 0;
+  margin-left: 0;
 }
-.people-column .person-small .person-normal {
-    text-align:center;
+.proj:hover {
+  color: grey;
+  padding: 9px;
+  border: 1px solid grey;
 }
-.people-column[open="none"] .person-small .person-extended {
-    opacity:1;
+.m123 {
+  position: absolute;
+  left: calc( 25% - 75px);
+  width: 50%;
 }
-.people-column[open="b"] .person-small.a {
-    display: none;
+.c706 {
+  position: absolute;
+  left: calc( 75% - 75px);
+  width: 50%;
 }
-.people-column[open="a"] .person-small.b {
-    display: none;
-}
-.people-column .person-normal {
-    display: inline-block;
-    vertical-align:top;
-    width:calc(50% - 2px);
-}
-.people-column .person-extended {
-    display: inline;
-    vertical-align:top;
-    width:calc(50% - 2px);
-}
-.people-column .person:hover .person-normal {
-    display: inline-block;
-    width:calc(50% - 2px);
-    vertical-align:top;
-}
-.people-column .person:hover .person-extended {
-    display: inline-grid;
-    height:100%;
-    margin:0;
-    vertical-align:top;
-    opacity:1;
-    -webkit-transition: opacity 0.5s;
-    /* Safari */
-    transition: opacity 0.5s;
+.tripp {
+  margin-left: calc( 50% - 75px);
 }
 .person-avatar {
-    height:150px;
-    text-align:center;
-    margin-top:10px;
-    border-radius:100px;
-    margin-bottom:10px;
+  height: 150px;
+  border-radius: 50%;
 }
-.extended-below {
-    padding-left:50%;
+
+/* entire container, keeps perspective */
+
+.flip-container {
+  perspective: 1000px;
+}
+
+/* flip the pane when hovered */
+
+.left.hover2 .flip-container:hover .flipper, .left.hover2 .flip-container.hover .flipper {
+  transform: rotateY(180deg);
+}
+.flip-container, .front, .back {
+  width: 100%;
+}
+
+/* flip speed goes here */
+
+.flipper {
+  transition: 0.6s;
+  transform-style: preserve-3d;
+  position: relative;
+}
+
+/* hide back of pane during swap */
+
+.front, .back {
+  backface-visibility: hidden;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+/* front pane, placed above back */
+
+.front {
+  z-index: 2;
+  /* for firefox 31 */
+  transform: rotateY(0deg);
+}
+
+/* back, initially hidden pane */
+
+.back {
+  transform: rotateY(180deg);
+}
+.more-members {
+  box-shadow: 5px 5px 30px black;
+  background: white;
+  transition: 0.6s;
+  transform-style: preserve-3d;
+  transform-origin: center bottom;
+  transform: rotateX(270deg);
+  display: block;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  border-radius: 10px;
+}
+.more .more-members {
+  transition: 0.6s;
+  transform-origin: center bottom;
+  transform-style: preserve-3d;
+  transform: rotateX(0deg);
+  display: block;
+  position: absolute;
+  bottom: 0px;
+  width: 100%;
+}
+button {
+  background: rgba(0, 0, 0, 0);
+  border: 1px solid grey;
+  outline: none;
+  border-radius: 10px;
 }
