--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,6 +1,6 @@
 @font-face {
-  src: url("../arcon-font/Arcon-Regular.otf");
-  font-family: "Arcon";
+	src: url("../arcon-font/Arcon-Regular.otf");
+	font-family: "Arcon";
 }
 
 @import url("https://fonts.googleapis.com/css2?family=Work+Sans:wght@300;400&display=swap");
@@ -12,30 +12,36 @@ $text: #bebebe;
 @import "../node_modules/bulma/bulma.sass";
 @import "../node_modules/@fortawesome/fontawesome-free/css/all.css";
 html {
-  background: url("../img/fluid.png");
-  padding: 0;
-  font-family: "Work Sans", sans-serif;
+	padding: 0;
+	font-family: "Work Sans", sans-serif;
 }
-
+#c {
+	width: 100vw;
+	height: 100vh;
+	position: fixed;
+	top: 0;
+	left: 0;
+	z-index: -1000;
+}
 .fc {
-  height: 1em;
+	height: 1em;
 }
 
 .skill-icon {
-  font-size: 128px;
+	font-size: 128px;
 }
 
 $red-color: #ff4e21;
 $gold-color: #ffc621;
 a {
-  color: $red-color;
-  text-decoration: none;
+	color: $red-color;
+	text-decoration: none;
 }
 
 body {
-  margin: 0;
-  padding: 0;
-  text-align: left;
+	margin: 0;
+	padding: 0;
+	text-align: left;
 }
 
 // #container {
@@ -47,143 +53,145 @@ body {
 //     box-sizing: border-box;
 // }
 #main-wrapper {
-  @include desktop {
-    margin-top: 1.25rem;
-  }
-  > .columns > .column > .box {
-    padding-top: 2.5rem;
-    @include desktop {
-      padding-top: 1.25rem;
-    }
-  }
+	@include desktop {
+		margin-top: 1.25rem;
+	}
+	> .columns > .column > .box {
+		padding-top: 2.5rem;
+		@include desktop {
+			padding-top: 1.25rem;
+		}
+		background: transparent !important;
+	}
 }
 
 h1 {
-  font-family: "Arcon";
-  font-size: 6em;
-  font-weight: bold;
-  margin: 0px;
-  line-height: 1;
+	font-family: "Arcon";
+	font-size: 6em;
+	font-weight: bold;
+	margin: 0px;
+	line-height: 1;
 }
 
 h1.gold,
-h2.gold {
-  // color: $gold-color;
-  background: linear-gradient(45deg, #3835f9, #1ad3a3, #ffeb3b, #ee524a);
-  background-clip: text;
-  -webkit-background-clip: text;
-  color: transparent;
-  height: 1.2em;
+h2.gold,
+span.gold {
+	// color: $gold-color;
+	background: linear-gradient(45deg, #3835f9, #1ad3a3, #ffeb3b, #ee524a);
+	background-clip: text;
+	-webkit-background-clip: text;
+	color: transparent;
+	height: 1.2em;
 }
 
 h1.red,
 h2.red {
-  color: $red-color;
+	color: $red-color;
 }
 
 h2 {
-  font-family: "Arcon";
-  font-size: 6em;
-  font-weight: bold;
-  margin: 0px;
-  color: rgb(227, 227, 227);
-  line-height: 1;
+	font-family: "Arcon";
+	font-size: 6em;
+	font-weight: bold;
+	margin: 0px;
+	color: rgb(227, 227, 227);
+	line-height: 1;
 }
 
 .navbar .container {
-  padding: 1.125rem 1.25rem !important;
-  display: flex !important;
-  max-width: 900px;
-  box-sizing: border-box;
-  transition: box-shadow 1s;
+	padding: 1.125rem 1.25rem !important;
+	display: flex !important;
+	max-width: 900px;
+	box-sizing: border-box;
+	transition: box-shadow 1s;
 }
 
 .navbar {
-  font-family: "Arcon";
-  font-size: 1em;
-  font-weight: bold;
-  color: white;
-  display: flex;
-  width: calc(100% + 2.5rem);
-  background: transparent;
-  margin-left: -1.25rem;
-  margin-right: -1.25rem;
-  padding: 0rem 0 !important;
-  &.sticky {
-    margin-top: 0px;
-    margin-bottom: 0px;
-    position: fixed;
-    margin-left: 0;
-    margin-right: 0;
-    width: 100%;
-    left: 0;
-    right: 0;
-    top: 40px;
-    .container {
-      padding: 1.125rem 1.25rem !important;
-      max-width: calc(900px);
-      background-color: mix($black, transparent);
-      backdrop-filter: blur(10px);
-      @include desktop {
-        border-radius: 6px;
-      }
-      box-shadow: 0 0.5em 1em -0.125em rgba(10, 10, 10, 0.1), 0 0px 0 1px rgba(10, 10, 10, 0.02);
-      color: inherit;
-      display: block;
-    }
-  }
+	font-family: "Arcon";
+	font-size: 1em;
+	font-weight: bold;
+	color: white;
+	display: flex;
+	width: calc(100% + 2.5rem);
+	background: transparent;
+	margin-left: -1.25rem;
+	margin-right: -1.25rem;
+	padding: 0rem 0 !important;
+	&.sticky {
+		margin-top: 0px;
+		margin-bottom: 0px;
+		position: fixed;
+		margin-left: 0;
+		margin-right: 0;
+		width: 100%;
+		left: 0;
+		right: 0;
+		top: 40px;
+		.container {
+			padding: 1.125rem 1.25rem !important;
+			max-width: calc(900px);
+			background-color: mix($black, transparent);
+			backdrop-filter: blur(10px);
+			@include desktop {
+				border-radius: 6px;
+			}
+			box-shadow: 0 0.5em 1em -0.125em rgba(10, 10, 10, 0.1), 0 0px 0 1px rgba(10, 10, 10, 0.02);
+			color: inherit;
+			display: block;
+		}
+	}
 }
 
 .navbar-item {
-  display: inline-block;
-  flex: 1;
-  margin-bottom: 0;
-  text-align: left;
-  text-transform: uppercase;
-  color: white;
-  font-family: "Arcon";
-  font-size: 1rem;
-  font-weight: bold;
-  padding: 0 !important;
-  line-height: 1rem;
-  height: 1rem;
-  @include tablet {
-    font-size: 1rem;
-  }
+	display: inline-block;
+	flex: 1;
+	margin-bottom: 0;
+	text-align: left;
+	text-transform: uppercase;
+	color: white;
+	font-family: "Arcon";
+	font-size: 1rem;
+	font-weight: bold;
+	padding: 0 !important;
+	line-height: 1rem;
+	height: 1rem;
+	@include tablet {
+		font-size: 1rem;
+	}
 }
 
 .nav-logo {
-  height: 3.25rem;
-  margin-top: -1.125rem;
-  max-height: 3.25rem !important;
+	height: 3.25rem;
+	margin-top: -1.125rem;
+	max-height: 3.25rem !important;
 }
 
 .navbar-item.nav-center {
-  text-align: center;
+	text-align: center;
 }
 
 .navbar-item.nav-right {
-  text-align: right;
+	text-align: right;
 }
 
 .dash-hr {
-  width: 40px;
-  text-align: left;
-  display: block;
-  margin-left: 0;
-  border: 1px solid $red-color;
+	width: 40px;
+	text-align: left;
+	display: block;
+	margin-left: 0;
+	border: 1px solid $red-color;
 }
 
 .section.top-section {
-  margin-top: 3em;
-  .spacer {
-    height: 0px;
-  }
-  &.sticky {
-    .spacer {
-      height: 52px;
-    }
-  }
+	margin-top: 3em;
+	.spacer {
+		height: 0px;
+	}
+	&.sticky {
+		.spacer {
+			height: 52px;
+		}
+	}
 }
 
 // .section.skill-section {
@@ -217,127 +225,127 @@ h2 {
 //     }
 // }
 .section.skills {
-  width: 100%;
-  .box {
-    height: 100%;
-    .content .columns {
-      .column ul {
-        list-style: none;
-        margin-left: 0;
-        margin-top: 0;
-      }
-    }
-  }
+	width: 100%;
+	.box {
+		height: 100%;
+		.content .columns {
+			.column ul {
+				list-style: none;
+				margin-left: 0;
+				margin-top: 0;
+			}
+		}
+	}
 }
 
 .section.skills {
-  .column {
-    &:nth-child(1) {
-      .box {
-        background: linear-gradient(45deg, $blue, $purple);
-      }
-    }
-    &:nth-child(2) {
-      .box {
-        background: linear-gradient(45deg, $purple, $red);
-      }
-    }
-    &:nth-child(3) {
-      .box {
-        background: linear-gradient(45deg, $red, mix($red, $yellow));
-      }
-    }
-    &:nth-child(4) {
-      .box {
-        background: linear-gradient(45deg, mix($red, $yellow), $yellow);
-      }
-    }
-  }
+	.column {
+		&:nth-child(1) {
+			.box {
+				background: linear-gradient(45deg, $blue, $purple);
+			}
+		}
+		&:nth-child(2) {
+			.box {
+				background: linear-gradient(45deg, $purple, $red);
+			}
+		}
+		&:nth-child(3) {
+			.box {
+				background: linear-gradient(45deg, $red, mix($red, $yellow));
+			}
+		}
+		&:nth-child(4) {
+			.box {
+				background: linear-gradient(45deg, mix($red, $yellow), $yellow);
+			}
+		}
+	}
 }
 
 .section.skills .box .content .columns {
-  flex-wrap: wrap;
+	flex-wrap: wrap;
 }
 
 .skill-intro {
-  height: 6rem;
+	height: 6rem;
 }
 
 .skill-cont {
-  height: 10rem;
+	height: 10rem;
 }
 
 .start-logo {
-  max-width: 300px;
-  margin-left: auto;
-  margin-right: auto;
+	max-width: 300px;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 .projects .project-grid figure {
-  overflow: hidden;
-  border-radius: 6px;
-  img.project-thumb {
-    background: transparent;
-    -webkit-transform: scale(1);
-    transform: scale(1);
-    -webkit-transition: 0.25s ease-in-out;
-    transition: 0.25s ease-in-out;
-  }
-  figcaption {
-    display: -webkit-box;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    flex-direction: column;
-    -webkit-box-pack: center;
-    justify-content: center;
-    padding: 0rem 3rem;
-    h1,
-    a {
-      color: #fff !important;
-    }
-    z-index: 1;
-  }
+	overflow: hidden;
+	border-radius: 6px;
+	img.project-thumb {
+		background: transparent;
+		-webkit-transform: scale(1);
+		transform: scale(1);
+		-webkit-transition: 0.25s ease-in-out;
+		transition: 0.25s ease-in-out;
+	}
+	figcaption {
+		display: -webkit-box;
+		display: flex;
+		-webkit-box-orient: vertical;
+		-webkit-box-direction: normal;
+		flex-direction: column;
+		-webkit-box-pack: center;
+		justify-content: center;
+		padding: 0rem 3rem;
+		h1,
+		a {
+			color: #fff !important;
+		}
+		z-index: 1;
+	}
 }
 
 .projects .project-grid .overlay,
 .projects .project-grid figcaption {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  opacity: 0;
-  -webkit-transition: 0.45s ease-in-out;
-  transition: 0.45s ease-in-out;
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	opacity: 0;
+	-webkit-transition: 0.45s ease-in-out;
+	transition: 0.45s ease-in-out;
 }
 
 .projects .project-grid figure:hover img {
-  -webkit-transform: scale(1.1);
-  transform: scale(1.1);
+	-webkit-transform: scale(1.1);
+	transform: scale(1.1);
 }
 
 .projects .project-grid figure:hover .overlay,
 .projects .project-grid figure:hover figcaption,
 .projects .project-grid figure.no-image .overlay,
 .projects .project-grid figure.no-image figcaption {
-  opacity: 1;
+	opacity: 1;
 }
 
 .projects .project-grid .overlay {
-  background-color: $red;
+	background-color: $red;
 }
 
 .projects .project-grid figure:hover .overlay,
 .projects .project-grid figure:hover figcaption {
-  opacity: 1;
+	opacity: 1;
 }
 
 #main-wrapper {
-  > .columns {
-    margin: 0;
-    > .column {
-      padding: 0;
-    }
-  }
+	> .columns {
+		margin: 0;
+		> .column {
+			padding: 0;
+		}
+	}
 }
