--- a/sass/style.scss
+++ b/sass/style.scss
@@ -27,6 +27,14 @@ html {
 	height: 1em;
 }
 
+#main-text {
+	width: 100%;
+	font-size: 8vw;
+	line-height: 1;
+	font-family: "Arcon";
+	color: white;
+}
+
 .skill-icon {
 	font-size: 128px;
 }
@@ -44,14 +52,6 @@ body {
 	text-align: left;
 }
 
-// #container {
-//     background: white;
-//     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-//     margin: 20px 0;
-//     padding: 40px;
-//     padding-top: calc( 40px - 0.4em);
-//     box-sizing: border-box;
-// }
 #main-wrapper {
 	@include desktop {
 		margin-top: 1.25rem;
