--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,10 +1,6 @@
 @font-face {
-	src: url("../arcon-font/Arcon-Regular.otf");
+	src: url("../fonts/Arcon-Regular.otf");
 	font-family: "Arcon";
-}
-@font-face {
-	src: url("../fonts/VCR_OSD_MONO_1.001.ttf");
-	font-family: "VCR";
 }
 
 @import url("https://fonts.googleapis.com/css2?family=Work+Sans:wght@300;400&display=swap");
@@ -12,13 +8,14 @@ $family-sans-serif: "Work Sans";
 $red: #ff4e21;
 $yellow: #ffc621;
 $text-strong: #000000;
-$text: #bebebe;
+$text: #000000;
 @import "../node_modules/bulma/bulma.sass";
 @import "../node_modules/@fortawesome/fontawesome-free/css/all.css";
+
 html {
-	padding: 0;
 	font-family: "Work Sans", sans-serif;
 }
+
 #c {
 	width: 100vw;
 	height: 100vh;
@@ -32,9 +29,6 @@ html {
 section {
 	padding-bottom: 15em;
 }
-.fc {
-	height: 1em;
-}
 
 #main-text {
 	width: 100%;
@@ -46,7 +40,12 @@ section {
 	font-size: 3vw;
 	font-style: bold;
 }
-
+.inverted {
+	background: #000;
+	// font-style: italic;
+	// text-decoration: underline;
+	color: rgb(243, 243, 243);
+}
 .skill-icon {
 	font-size: 128px;
 }
@@ -59,23 +58,9 @@ a {
 }
 
 body {
-	color: black;
 	margin: 0;
 	padding: 0;
 	text-align: left;
-}
-
-#main-wrapper {
-	@include desktop {
-		margin-top: 1.25rem;
-	}
-	> .columns > .column > .box {
-		padding-top: 2.5rem;
-		@include desktop {
-			padding-top: 1.25rem;
-		}
-		background: transparent !important;
-	}
 }
 
 h1 {
@@ -91,32 +76,12 @@ span.gold {
 	font-style: italic;
 }
 
-.gilbert-img {
-	height: 0.8em;
-	display: inline;
-}
-
 .navbar .container {
 	padding: 1.125rem 1.25rem !important;
 	display: flex !important;
 	max-width: 900px;
 	box-sizing: border-box;
 	transition: box-shadow 1s;
-}
-
-.dash-hr {
-	width: 40px;
-	text-align: left;
-	display: block;
-	margin-left: 0;
-	border: 1px solid $red-color;
-}
-
-.spacer {
-	height: 0px;
-	&.sticky {
-		height: 52px;
-	}
 }
 
 .section.skills {
@@ -220,13 +185,4 @@ span.gold {
 .projects .project-grid figure:hover .overlay,
 .projects .project-grid figure:hover figcaption {
 	opacity: 1;
-}
-
-#main-wrapper {
-	> .columns {
-		margin: 0;
-		> .column {
-			padding: 0;
-		}
-	}
 }
