--- a/sass/style.scss
+++ b/sass/style.scss
@@ -31,12 +31,12 @@ html {
 	pointer-events: none;
 }
 section {
-	padding-bottom: 15em;
+	// padding-bottom: 15em;
 }
 
 #main-text {
 	width: 100%;
-	font-size: 6vw;
+	font-size: 6.3vh;
 	line-height: 1;
 	font-family: "Arcon";
 }
