--- a/sass/style.scss
+++ b/sass/style.scss
@@ -185,3 +185,11 @@ span.gold {
 .projects .project-grid figure:hover figcaption {
 	opacity: 1;
 }
+.top-container{
+	margin-top: auto;
+	margin-bottom: 0;
+}
+.blurb-img{
+	height:calc( 50vh - 0px );
+	max-width: 70vw;
+}
