--- a/sass/style.scss
+++ b/sass/style.scss
@@ -135,6 +135,8 @@ span.gold {
 		transform: scale(1);
 		-webkit-transition: 0.25s ease-in-out;
 		transition: 0.25s ease-in-out;
+		object-fit: cover;
+		background:black;
 	}
 	figcaption {
 		display: -webkit-box;
